--- a/starship.toml
+++ b/starship.toml
@@ -21,7 +21,7 @@ style_root = 'black bold'
 format = '[$user]($style)'
 disabled = false
 show_always = true
-aliases = { "robertwunderl" = "meister " }
+aliases = { "my_username" = "meister " }
 
 [hostname]
 ssh_only = true
